add snippets
